# jucrypt

./: CHANGELOG.md  LICENSE  SECURITY.md  pyproject.toml  readme.md
jucrypt/: __init__.py  default_sboxes.py  story.py
jucrypt/customju/: sboxes.json
